--- a/portfolio/css/projects.css
+++ b/portfolio/css/projects.css
@@ -10,6 +10,8 @@ main > h1{
     background-color: #eeeeee;
     color: #393E46;
     margin: 0px;
+    
+    padding: 50px 0px;
 }
 
 .projects-container{
